example/error/lexer_error.pas
Program example(input, output);

Const a = 1;

Var x, y : integer；
Begin
  read(x, y)
End.
{This comment is not complete